<resources>
    <string name="app_name">PrepUp</string>
    <string name="title_activity_maps2">Karta</string>
    <string name="backButton">BakåtPilen</string>


    <!-->activity_news<-->
    <string name="news_section_header">Nyheter</string>
    <string name="news_disclaimer">Alla nyheter är hämtade från krisinformation.se API</string>

    <!-->activity_pantry<-->
    <string name="pantry_header">Förråd</string>

    <!-->activity_pantry_add_item_form-->
    <string name="pantry_add_item_header">Lägg till</string>

    <!-->activity_tips<-->
    <string name="tips_section_header">Tips &amp; Tricks</string>
    <string name="lightBulb">bild</string>
    <string name="HomeButton">HemSymbolen</string>
    <string name="account_name">Account name</string>
    <string name="mail_mail_com">mail@mail.com</string>
    <string name="yourNewTipText">Fixa ditt tips!</string>
    <string name="newTipText">Skapa ett tips!</string>

    <string name="titelHint">Skriv en rubrik på ditt tips</string>
    <string name="chooseCategoryHint">Välj en eller fler kategorier</string>

    <string name="descriptionHint">\n\n \nBeskriv ditt tips</string>
    <string name="saveText">Spara</string>
    <string name="deleteText">Radera detta tips</string>
    <string name="cancelText">Avbryt</string>


    <string name="warmthCheckBoxText">Värme</string>
    <string name="waterCheckBoxText">Vatten</string>
    <string name="shelterCheckBoxText">Skydd</string>
    <string name="foodCheckBoxText">Mat</string>
    <string name="healthCheckBoxText">Sjukvård</string>
    <string name="securityCheckBoxText">Säkerhet</string>
    <string name="storageCheckBoxText">Förvaring</string>
    <string name="otherCheckBoxText">Övrigt</string>

    <string name="categoryTextView">Tipsets Kategorier: </string>
    <string name="tipsTitelTextView">Title </string>
    <string name="tipsEditTextView">Redigera detta tips</string>
    <string name="tipsLikeTextView">Gilla och ladda ner \n detta tips</string>


    <string name="facebook_app_id">2174193092616862</string>
    <string name="fb_login_protocol_scheme">fb2174193092616862</string>

    <!-- Alert dialog yes/no -->
    <string name="positive_option">Ta bort</string>
    <string name="negative_option">Avbryt</string>

    <string-array name="categoryArray">
        <item>Värme1</item>
        <item>Vatten2</item>
        <item>Skydd3</item>
        <item>Mat4</item>
        <item>Sjukvård5</item>
        <item>Informationssäkerhet6</item>
    </string-array>

    <color name="white">#F2F2F2</color>
    <color name="infowindowcolor">#CF6F6F</color>


    <!-->activity_category<-->
    <string name="category_section_header">Kategorier</string>
    <string name="myButton">Mina skapade</string>
    <string name="allButton">Alla</string>
    <string name="documentButton">Dokument</string>
    <string name="tipsButton">Dina sparade tips</string>


    <string name="warmthButton">Värme</string>
    <string name="waterButton">Vatten</string>
    <string name="shelterButton">Skydd</string>
    <string name="foodButton">Mat</string>
    <string name="healthButton">Sjukvård</string>
    <string name="securityButton">Säkerhet</string>
    <string name="storageButton">Förvaring</string>
    <string name="otherButton">Övrigt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
